packages/style-macro/tests/fixtures/reject/scope-mismatch.input.tsx
import { $style } from '@vapor-ui/core';
export const C = () => <div className={$style({ padding: '$primary' })} />;
